Took out personal information

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
 <!--PERSONAL INFORMATION-->
 	<div class="personal1">Jeffrey Michael Bortman</div>
-	<div class="personal2">16A Pauline Drive, Natick, MA 01760 | 774-277-2329 | Jeffrey.Bortman@tufts.edu</div>
+	<div class="personal2">16 South Park Drive, South Park, CO 02155 | 617-000-0000 | Stan.Marsh@tufts.edu</div>
 <!--Education-->
 <div class="body2">
 	<p class="header1">Education</p>
