--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<p class="title1">Jeffrey Bortman</p>
 	<p class="title2"> Welcome to my Homepage</p>
-	<img height= "280" width= "160" img src="Linked in Best.jpg">
+	<img height= "280" width= "160" img src="linked_in_best.jpg">
 	<p><a href="resume.html">Click to View Jeffrey Bortman's Resume </a></p>
 	<p>
 	<a href=""bio.html">Click to View Jeffrey Bortman's Autobiography</a></p>
