--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<img height= "280" width= "160" img src="linked_in_best.jpg">
 	<p><a href="resume.html">Click to View Jeffrey Bortman's Resume </a></p>
 	<p>
-	<a href=""bio.html">Click to View Jeffrey Bortman's Autobiography</a></p>
+	<a href="bio.html">Click to View Jeffrey Bortman's Autobiography</a></p>
 </body>
 
 </html>
