Everything linked and validated

--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
 	<title> Jeffrey Bortman Resume</title>
 	<link rel="stylesheet" type="text/css" href="resume_style.css">
+	<meta charset="UTF-8">
 </head>
 
 <body>
