--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Jeffrey Bortman Homepage</title>
 	<link rel="stylesheet" type="text/css" href="index_style.css">
+	<meta charset="UTF-8">
 </head>
 
 <body>
 	<p class="title1">Jeffrey Bortman</p>
 	<p class="title2"> Welcome to my Homepage</p>
-	<img height= "280" width= "160" img src="linked_in_best.jpg">
+	<img class="image1" src="linked_in_best.jpg" alt="Homepage Picture">
 	<p><a href="resume.html">Click to View Jeffrey Bortman's Resume </a></p>
 	<p>
 	<a href="bio.html">Click to View Jeffrey Bortman's Autobiography</a></p>
